Worked on stand-alone version.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,5 @@
 TODO
 
-20140920
-* changes for project site move
-
-20140808
-* Created stand-alone version of version used in libolecf
+20140928
+* Created stand-alone version of version used in libevt
 
