Worked on utility scripts

--- a/README
+++ b/README
@@ -1,5 +1,9 @@
 libfwevt is a library for Windows XML Event Log (EVTX) data types.
 
+Project information:
+* Status: alpha
+* Licence: LGPLv3+
+
 For more information see:
 * Project documentation: https://github.com/libyal/libfwevt/wiki/Home
 * How to build from source: https://github.com/libyal/libfwevt/wiki/Building
