--- a/manuals/libfwevt.3
+++ b/manuals/libfwevt.3
@@ -1,11 +1,9 @@
-.Dd January 13, 2017
+.Dd April  5, 2019
 .Dt libfwevt 3
 .Os libfwevt
 .Sh NAME
 .Nm libfwevt.h
 .Nd Library to support the Windows XML Event Log (EVTX) data types
-.Sh LIBRARY
-.Lb libfwevt
 .Sh SYNOPSIS
 .In libfwevt.h
 .Pp
@@ -17,229 +15,229 @@ Error functions
 .Ft void
 .Fn libfwevt_error_free "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_error_fprint "libfwevt_error_t *error, FILE *stream"
+.Fn libfwevt_error_fprint "libfwevt_error_t *error" "FILE *stream"
 .Ft int
-.Fn libfwevt_error_sprint "libfwevt_error_t *error, char *string, size_t size"
+.Fn libfwevt_error_sprint "libfwevt_error_t *error" "char *string" "size_t size"
 .Ft int
-.Fn libfwevt_error_backtrace_fprint "libfwevt_error_t *error, FILE *stream"
+.Fn libfwevt_error_backtrace_fprint "libfwevt_error_t *error" "FILE *stream"
 .Ft int
-.Fn libfwevt_error_backtrace_sprint "libfwevt_error_t *error, char *string, size_t size"
+.Fn libfwevt_error_backtrace_sprint "libfwevt_error_t *error" "char *string" "size_t size"
 .Pp
 Channel functions
 .Ft int
-.Fn libfwevt_channel_initialize "libfwevt_channel_t **channel, libfwevt_error_t **error"
+.Fn libfwevt_channel_initialize "libfwevt_channel_t **channel" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_channel_free "libfwevt_channel_t **channel, libfwevt_error_t **error"
+.Fn libfwevt_channel_free "libfwevt_channel_t **channel" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_channel_read "libfwevt_channel_t *channel, const uint8_t *data, size_t data_size, size_t data_offset, libfwevt_error_t **error"
+.Fn libfwevt_channel_read "libfwevt_channel_t *channel" "const uint8_t *data" "size_t data_size" "size_t data_offset" "libfwevt_error_t **error"
 .Pp
 Event functions
 .Ft int
-.Fn libfwevt_event_initialize "libfwevt_event_t **event, libfwevt_error_t **error"
+.Fn libfwevt_event_initialize "libfwevt_event_t **event" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_event_free "libfwevt_event_t **event, libfwevt_error_t **error"
+.Fn libfwevt_event_free "libfwevt_event_t **event" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_event_read "libfwevt_event_t *event, const uint8_t *data, size_t data_size, size_t data_offset, libfwevt_error_t **error"
+.Fn libfwevt_event_read "libfwevt_event_t *event" "const uint8_t *data" "size_t data_size" "size_t data_offset" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_event_get_identifier "libfwevt_event_t *event, uint32_t *identifier, libfwevt_error_t **error"
+.Fn libfwevt_event_get_identifier "libfwevt_event_t *event" "uint32_t *identifier" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_event_get_message_identifier "libfwevt_event_t *event, uint32_t *message_identifier, libfwevt_error_t **error"
+.Fn libfwevt_event_get_message_identifier "libfwevt_event_t *event" "uint32_t *message_identifier" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_event_get_template_offset "libfwevt_event_t *event, uint32_t *template_offset, libfwevt_error_t **error"
+.Fn libfwevt_event_get_template_offset "libfwevt_event_t *event" "uint32_t *template_offset" "libfwevt_error_t **error"
 .Pp
 Keyword functions
 .Ft int
-.Fn libfwevt_keyword_initialize "libfwevt_keyword_t **keyword, libfwevt_error_t **error"
+.Fn libfwevt_keyword_initialize "libfwevt_keyword_t **keyword" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_keyword_free "libfwevt_keyword_t **keyword, libfwevt_error_t **error"
+.Fn libfwevt_keyword_free "libfwevt_keyword_t **keyword" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_keyword_read "libfwevt_keyword_t *keyword, const uint8_t *data, size_t data_size, size_t data_offset, libfwevt_error_t **error"
+.Fn libfwevt_keyword_read "libfwevt_keyword_t *keyword" "const uint8_t *data" "size_t data_size" "size_t data_offset" "libfwevt_error_t **error"
 .Pp
 Level functions
 .Ft int
-.Fn libfwevt_level_initialize "libfwevt_level_t **level, libfwevt_error_t **error"
+.Fn libfwevt_level_initialize "libfwevt_level_t **level" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_level_free "libfwevt_level_t **level, libfwevt_error_t **error"
+.Fn libfwevt_level_free "libfwevt_level_t **level" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_level_read "libfwevt_level_t *level, const uint8_t *data, size_t data_size, size_t data_offset, libfwevt_error_t **error"
+.Fn libfwevt_level_read "libfwevt_level_t *level" "const uint8_t *data" "size_t data_size" "size_t data_offset" "libfwevt_error_t **error"
 .Pp
 Manifest functions
 .Ft int
-.Fn libfwevt_manifest_initialize "libfwevt_manifest_t **manifest, libfwevt_error_t **error"
+.Fn libfwevt_manifest_initialize "libfwevt_manifest_t **manifest" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_manifest_free "libfwevt_manifest_t **manifest, libfwevt_error_t **error"
+.Fn libfwevt_manifest_free "libfwevt_manifest_t **manifest" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_manifest_read "libfwevt_manifest_t *manifest, const uint8_t *data, size_t data_size, libfwevt_error_t **error"
+.Fn libfwevt_manifest_read "libfwevt_manifest_t *manifest" "const uint8_t *data" "size_t data_size" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_manifest_get_number_of_providers "libfwevt_manifest_t *manifest, int *number_of_providers, libfwevt_error_t **error"
+.Fn libfwevt_manifest_get_number_of_providers "libfwevt_manifest_t *manifest" "int *number_of_providers" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_manifest_get_provider "libfwevt_manifest_t *manifest, int provider_index, libfwevt_provider_t **provider, libfwevt_error_t **error"
+.Fn libfwevt_manifest_get_provider "libfwevt_manifest_t *manifest" "int provider_index" "libfwevt_provider_t **provider" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_manifest_get_provider_by_identifier "libfwevt_manifest_t *manifest, const uint8_t *provider_identifier, size_t provider_identifier_size, libfwevt_provider_t **provider, libfwevt_error_t **error"
+.Fn libfwevt_manifest_get_provider_by_identifier "libfwevt_manifest_t *manifest" "const uint8_t *provider_identifier" "size_t provider_identifier_size" "libfwevt_provider_t **provider" "libfwevt_error_t **error"
 .Pp
 Map functions
 .Ft int
-.Fn libfwevt_map_initialize "libfwevt_map_t **map, libfwevt_error_t **error"
+.Fn libfwevt_map_initialize "libfwevt_map_t **map" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_map_free "libfwevt_map_t **map, libfwevt_error_t **error"
+.Fn libfwevt_map_free "libfwevt_map_t **map" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_map_read "libfwevt_map_t *map, const uint8_t *data, size_t data_size, size_t data_offset, libfwevt_error_t **error"
+.Fn libfwevt_map_read "libfwevt_map_t *map" "const uint8_t *data" "size_t data_size" "size_t data_offset" "libfwevt_error_t **error"
 .Pp
 Opcode functions
 .Ft int
-.Fn libfwevt_opcode_initialize "libfwevt_opcode_t **opcode, libfwevt_error_t **error"
+.Fn libfwevt_opcode_initialize "libfwevt_opcode_t **opcode" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_opcode_free "libfwevt_opcode_t **opcode, libfwevt_error_t **error"
+.Fn libfwevt_opcode_free "libfwevt_opcode_t **opcode" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_opcode_read "libfwevt_opcode_t *opcode, const uint8_t *data, size_t data_size, size_t data_offset, libfwevt_error_t **error"
+.Fn libfwevt_opcode_read "libfwevt_opcode_t *opcode" "const uint8_t *data" "size_t data_size" "size_t data_offset" "libfwevt_error_t **error"
 .Pp
 Provider functions
 .Ft int
-.Fn libfwevt_provider_initialize "libfwevt_provider_t **provider, const uint8_t *identifier, size_t identifier_size, libfwevt_error_t **error"
+.Fn libfwevt_provider_initialize "libfwevt_provider_t **provider" "const uint8_t *identifier" "size_t identifier_size" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_provider_free "libfwevt_provider_t **provider, libfwevt_error_t **error"
+.Fn libfwevt_provider_free "libfwevt_provider_t **provider" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_provider_read "libfwevt_provider_t *provider, const uint8_t *data, size_t data_size, size_t data_offset, libfwevt_error_t **error"
+.Fn libfwevt_provider_read "libfwevt_provider_t *provider" "const uint8_t *data" "size_t data_size" "size_t data_offset" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_provider_read_channels "libfwevt_provider_t *provider, const uint8_t *data, size_t data_size, libfwevt_error_t **error"
+.Fn libfwevt_provider_read_channels "libfwevt_provider_t *provider" "const uint8_t *data" "size_t data_size" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_provider_read_events "libfwevt_provider_t *provider, const uint8_t *data, size_t data_size, libfwevt_error_t **error"
+.Fn libfwevt_provider_read_events "libfwevt_provider_t *provider" "const uint8_t *data" "size_t data_size" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_provider_read_keywords "libfwevt_provider_t *provider, const uint8_t *data, size_t data_size, libfwevt_error_t **error"
+.Fn libfwevt_provider_read_keywords "libfwevt_provider_t *provider" "const uint8_t *data" "size_t data_size" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_provider_read_levels "libfwevt_provider_t *provider, const uint8_t *data, size_t data_size, libfwevt_error_t **error"
+.Fn libfwevt_provider_read_levels "libfwevt_provider_t *provider" "const uint8_t *data" "size_t data_size" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_provider_read_maps "libfwevt_provider_t *provider, const uint8_t *data, size_t data_size, libfwevt_error_t **error"
+.Fn libfwevt_provider_read_maps "libfwevt_provider_t *provider" "const uint8_t *data" "size_t data_size" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_provider_read_opcodes "libfwevt_provider_t *provider, const uint8_t *data, size_t data_size, libfwevt_error_t **error"
+.Fn libfwevt_provider_read_opcodes "libfwevt_provider_t *provider" "const uint8_t *data" "size_t data_size" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_provider_read_tasks "libfwevt_provider_t *provider, const uint8_t *data, size_t data_size, libfwevt_error_t **error"
+.Fn libfwevt_provider_read_tasks "libfwevt_provider_t *provider" "const uint8_t *data" "size_t data_size" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_provider_read_templates "libfwevt_provider_t *provider, const uint8_t *data, size_t data_size, libfwevt_error_t **error"
+.Fn libfwevt_provider_read_templates "libfwevt_provider_t *provider" "const uint8_t *data" "size_t data_size" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_provider_compare_identifier "libfwevt_provider_t *provider, const uint8_t *identifier, size_t identifier_size, libfwevt_error_t **error"
+.Fn libfwevt_provider_compare_identifier "libfwevt_provider_t *provider" "const uint8_t *identifier" "size_t identifier_size" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_provider_get_number_of_channels "libfwevt_provider_t *provider, int *number_of_channels, libfwevt_error_t **error"
+.Fn libfwevt_provider_get_number_of_channels "libfwevt_provider_t *provider" "int *number_of_channels" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_provider_get_channel "libfwevt_provider_t *provider, int channel_index, libfwevt_channel_t **channel, libfwevt_error_t **error"
+.Fn libfwevt_provider_get_channel "libfwevt_provider_t *provider" "int channel_index" "libfwevt_channel_t **channel" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_provider_get_number_of_events "libfwevt_provider_t *provider, int *number_of_events, libfwevt_error_t **error"
+.Fn libfwevt_provider_get_number_of_events "libfwevt_provider_t *provider" "int *number_of_events" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_provider_get_event "libfwevt_provider_t *provider, int event_index, libfwevt_event_t **event, libfwevt_error_t **error"
+.Fn libfwevt_provider_get_event "libfwevt_provider_t *provider" "int event_index" "libfwevt_event_t **event" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_provider_get_event_by_identifier "libfwevt_provider_t *provider, uint32_t event_identifier, libfwevt_event_t **event, libfwevt_error_t **error"
+.Fn libfwevt_provider_get_event_by_identifier "libfwevt_provider_t *provider" "uint32_t event_identifier" "libfwevt_event_t **event" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_provider_get_number_of_keywords "libfwevt_provider_t *provider, int *number_of_keywords, libfwevt_error_t **error"
+.Fn libfwevt_provider_get_number_of_keywords "libfwevt_provider_t *provider" "int *number_of_keywords" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_provider_get_keyword "libfwevt_provider_t *provider, int keyword_index, libfwevt_keyword_t **keyword, libfwevt_error_t **error"
+.Fn libfwevt_provider_get_keyword "libfwevt_provider_t *provider" "int keyword_index" "libfwevt_keyword_t **keyword" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_provider_get_number_of_levels "libfwevt_provider_t *provider, int *number_of_levels, libfwevt_error_t **error"
+.Fn libfwevt_provider_get_number_of_levels "libfwevt_provider_t *provider" "int *number_of_levels" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_provider_get_level "libfwevt_provider_t *provider, int level_index, libfwevt_level_t **level, libfwevt_error_t **error"
+.Fn libfwevt_provider_get_level "libfwevt_provider_t *provider" "int level_index" "libfwevt_level_t **level" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_provider_get_number_of_maps "libfwevt_provider_t *provider, int *number_of_maps, libfwevt_error_t **error"
+.Fn libfwevt_provider_get_number_of_maps "libfwevt_provider_t *provider" "int *number_of_maps" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_provider_get_map "libfwevt_provider_t *provider, int map_index, libfwevt_map_t **map, libfwevt_error_t **error"
+.Fn libfwevt_provider_get_map "libfwevt_provider_t *provider" "int map_index" "libfwevt_map_t **map" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_provider_get_number_of_opcodes "libfwevt_provider_t *provider, int *number_of_opcodes, libfwevt_error_t **error"
+.Fn libfwevt_provider_get_number_of_opcodes "libfwevt_provider_t *provider" "int *number_of_opcodes" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_provider_get_opcode "libfwevt_provider_t *provider, int opcode_index, libfwevt_opcode_t **opcode, libfwevt_error_t **error"
+.Fn libfwevt_provider_get_opcode "libfwevt_provider_t *provider" "int opcode_index" "libfwevt_opcode_t **opcode" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_provider_get_number_of_tasks "libfwevt_provider_t *provider, int *number_of_tasks, libfwevt_error_t **error"
+.Fn libfwevt_provider_get_number_of_tasks "libfwevt_provider_t *provider" "int *number_of_tasks" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_provider_get_task "libfwevt_provider_t *provider, int task_index, libfwevt_task_t **task, libfwevt_error_t **error"
+.Fn libfwevt_provider_get_task "libfwevt_provider_t *provider" "int task_index" "libfwevt_task_t **task" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_provider_get_number_of_templates "libfwevt_provider_t *provider, int *number_of_templates, libfwevt_error_t **error"
+.Fn libfwevt_provider_get_number_of_templates "libfwevt_provider_t *provider" "int *number_of_templates" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_provider_get_template "libfwevt_provider_t *provider, int template_index, libfwevt_template_t **template, libfwevt_error_t **error"
+.Fn libfwevt_provider_get_template "libfwevt_provider_t *provider" "int template_index" "libfwevt_template_t **template" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_provider_get_template_by_offset "libfwevt_provider_t *provider, uint32_t offset, libfwevt_template_t **template, libfwevt_error_t **error"
+.Fn libfwevt_provider_get_template_by_offset "libfwevt_provider_t *provider" "uint32_t offset" "libfwevt_template_t **template" "libfwevt_error_t **error"
 .Pp
 Task functions
 .Ft int
-.Fn libfwevt_task_initialize "libfwevt_task_t **task, libfwevt_error_t **error"
+.Fn libfwevt_task_initialize "libfwevt_task_t **task" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_task_free "libfwevt_task_t **task, libfwevt_error_t **error"
+.Fn libfwevt_task_free "libfwevt_task_t **task" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_task_read "libfwevt_task_t *task, const uint8_t *data, size_t data_size, size_t data_offset, libfwevt_error_t **error"
+.Fn libfwevt_task_read "libfwevt_task_t *task" "const uint8_t *data" "size_t data_size" "size_t data_offset" "libfwevt_error_t **error"
 .Pp
 Template functions
 .Ft int
-.Fn libfwevt_template_initialize "libfwevt_template_t **template, libfwevt_error_t **error"
+.Fn libfwevt_template_initialize "libfwevt_template_t **template" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_template_free "libfwevt_template_t **template, libfwevt_error_t **error"
+.Fn libfwevt_template_free "libfwevt_template_t **template" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_template_read "libfwevt_template_t *template, const uint8_t *data, size_t data_size, size_t data_offset, libfwevt_error_t **error"
+.Fn libfwevt_template_read "libfwevt_template_t *template" "const uint8_t *data" "size_t data_size" "size_t data_offset" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_template_read_xml_document "libfwevt_template_t *template, libfwevt_xml_document_t *xml_document, libfwevt_error_t **error"
+.Fn libfwevt_template_read_xml_document "libfwevt_template_t *template" "libfwevt_xml_document_t *xml_document" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_template_set_ascii_codepage "libfwevt_template_t *template, int ascii_codepage, libfwevt_error_t **error"
+.Fn libfwevt_template_set_ascii_codepage "libfwevt_template_t *template" "int ascii_codepage" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_template_get_data "libfwevt_template_t *template, const uint8_t **data, size_t *data_size, libfwevt_error_t **error"
+.Fn libfwevt_template_get_data "libfwevt_template_t *template" "const uint8_t **data" "size_t *data_size" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_template_set_data "libfwevt_template_t *template, const uint8_t *data, size_t data_size, libfwevt_error_t **error"
+.Fn libfwevt_template_set_data "libfwevt_template_t *template" "const uint8_t *data" "size_t data_size" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_template_get_offset "libfwevt_template_t *template, uint32_t *offset, libfwevt_error_t **error"
+.Fn libfwevt_template_get_offset "libfwevt_template_t *template" "uint32_t *offset" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_template_set_offset "libfwevt_template_t *template, uint32_t offset, libfwevt_error_t **error"
+.Fn libfwevt_template_set_offset "libfwevt_template_t *template" "uint32_t offset" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_template_get_size "libfwevt_template_t *template, uint32_t *size, libfwevt_error_t **error"
+.Fn libfwevt_template_get_size "libfwevt_template_t *template" "uint32_t *size" "libfwevt_error_t **error"
 .Pp
 XML document functions
 .Ft int
-.Fn libfwevt_xml_document_initialize "libfwevt_xml_document_t **xml_document, libfwevt_error_t **error"
+.Fn libfwevt_xml_document_initialize "libfwevt_xml_document_t **xml_document" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_xml_document_free "libfwevt_xml_document_t **xml_document, libfwevt_error_t **error"
+.Fn libfwevt_xml_document_free "libfwevt_xml_document_t **xml_document" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_xml_document_clone "libfwevt_xml_document_t **destination_xml_document, libfwevt_xml_document_t *source_xml_document, libfwevt_error_t **error"
+.Fn libfwevt_xml_document_clone "libfwevt_xml_document_t **destination_xml_document" "libfwevt_xml_document_t *source_xml_document" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_xml_document_get_root_xml_tag "libfwevt_xml_document_t *xml_document, libfwevt_xml_tag_t **root_xml_tag, libfwevt_error_t **error"
+.Fn libfwevt_xml_document_get_root_xml_tag "libfwevt_xml_document_t *xml_document" "libfwevt_xml_tag_t **root_xml_tag" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_xml_document_read "libfwevt_xml_document_t *xml_document, const uint8_t *binary_data, size_t binary_data_size, size_t binary_data_offset, int ascii_codepage, uint8_t flags, libfwevt_error_t **error"
+.Fn libfwevt_xml_document_read "libfwevt_xml_document_t *xml_document" "const uint8_t *binary_data" "size_t binary_data_size" "size_t binary_data_offset" "int ascii_codepage" "uint8_t flags" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_xml_document_get_utf8_xml_string_size "libfwevt_xml_document_t *xml_document, size_t *utf8_string_size, libfwevt_error_t **error"
+.Fn libfwevt_xml_document_get_utf8_xml_string_size "libfwevt_xml_document_t *xml_document" "size_t *utf8_string_size" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_xml_document_get_utf8_xml_string "libfwevt_xml_document_t *xml_document, uint8_t *utf8_string, size_t utf8_string_size, libfwevt_error_t **error"
+.Fn libfwevt_xml_document_get_utf8_xml_string "libfwevt_xml_document_t *xml_document" "uint8_t *utf8_string" "size_t utf8_string_size" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_xml_document_get_utf16_xml_string_size "libfwevt_xml_document_t *xml_document, size_t *utf16_string_size, libfwevt_error_t **error"
+.Fn libfwevt_xml_document_get_utf16_xml_string_size "libfwevt_xml_document_t *xml_document" "size_t *utf16_string_size" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_xml_document_get_utf16_xml_string "libfwevt_xml_document_t *xml_document, uint16_t *utf16_string, size_t utf16_string_size, libfwevt_error_t **error"
+.Fn libfwevt_xml_document_get_utf16_xml_string "libfwevt_xml_document_t *xml_document" "uint16_t *utf16_string" "size_t utf16_string_size" "libfwevt_error_t **error"
 .Pp
 XML tag functions
 .Ft int
-.Fn libfwevt_xml_tag_get_utf8_name_size "libfwevt_xml_tag_t *xml_tag, size_t *utf8_string_size, libfwevt_error_t **error"
+.Fn libfwevt_xml_tag_get_utf8_name_size "libfwevt_xml_tag_t *xml_tag" "size_t *utf8_string_size" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_xml_tag_get_utf8_name "libfwevt_xml_tag_t *xml_tag, uint8_t *utf8_string, size_t utf8_string_size, libfwevt_error_t **error"
+.Fn libfwevt_xml_tag_get_utf8_name "libfwevt_xml_tag_t *xml_tag" "uint8_t *utf8_string" "size_t utf8_string_size" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_xml_tag_get_utf16_name_size "libfwevt_xml_tag_t *xml_tag, size_t *utf16_string_size, libfwevt_error_t **error"
+.Fn libfwevt_xml_tag_get_utf16_name_size "libfwevt_xml_tag_t *xml_tag" "size_t *utf16_string_size" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_xml_tag_get_utf16_name "libfwevt_xml_tag_t *xml_tag, uint16_t *utf16_string, size_t utf16_string_size, libfwevt_error_t **error"
+.Fn libfwevt_xml_tag_get_utf16_name "libfwevt_xml_tag_t *xml_tag" "uint16_t *utf16_string" "size_t utf16_string_size" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_xml_tag_get_utf8_value_size "libfwevt_xml_tag_t *xml_tag, size_t *utf8_string_size, libfwevt_error_t **error"
+.Fn libfwevt_xml_tag_get_utf8_value_size "libfwevt_xml_tag_t *xml_tag" "size_t *utf8_string_size" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_xml_tag_get_utf8_value "libfwevt_xml_tag_t *xml_tag, uint8_t *utf8_string, size_t utf8_string_size, libfwevt_error_t **error"
+.Fn libfwevt_xml_tag_get_utf8_value "libfwevt_xml_tag_t *xml_tag" "uint8_t *utf8_string" "size_t utf8_string_size" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_xml_tag_get_utf16_value_size "libfwevt_xml_tag_t *xml_tag, size_t *utf16_string_size, libfwevt_error_t **error"
+.Fn libfwevt_xml_tag_get_utf16_value_size "libfwevt_xml_tag_t *xml_tag" "size_t *utf16_string_size" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_xml_tag_get_utf16_value "libfwevt_xml_tag_t *xml_tag, uint16_t *utf16_string, size_t utf16_string_size, libfwevt_error_t **error"
+.Fn libfwevt_xml_tag_get_utf16_value "libfwevt_xml_tag_t *xml_tag" "uint16_t *utf16_string" "size_t utf16_string_size" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_xml_tag_get_number_of_attributes "libfwevt_xml_tag_t *xml_tag, int *number_of_attributes, libfwevt_error_t **error"
+.Fn libfwevt_xml_tag_get_number_of_attributes "libfwevt_xml_tag_t *xml_tag" "int *number_of_attributes" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_xml_tag_get_attribute_by_index "libfwevt_xml_tag_t *xml_tag, int attribute_index, libfwevt_xml_tag_t **attribute_xml_tag, libfwevt_error_t **error"
+.Fn libfwevt_xml_tag_get_attribute_by_index "libfwevt_xml_tag_t *xml_tag" "int attribute_index" "libfwevt_xml_tag_t **attribute_xml_tag" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_xml_tag_get_attribute_by_utf8_name "libfwevt_xml_tag_t *xml_tag, const uint8_t *utf8_string, size_t utf8_string_length, libfwevt_xml_tag_t **attribute_xml_tag, libfwevt_error_t **error"
+.Fn libfwevt_xml_tag_get_attribute_by_utf8_name "libfwevt_xml_tag_t *xml_tag" "const uint8_t *utf8_string" "size_t utf8_string_length" "libfwevt_xml_tag_t **attribute_xml_tag" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_xml_tag_get_attribute_by_utf16_name "libfwevt_xml_tag_t *xml_tag, const uint16_t *utf16_string, size_t utf16_string_length, libfwevt_xml_tag_t **attribute_xml_tag, libfwevt_error_t **error"
+.Fn libfwevt_xml_tag_get_attribute_by_utf16_name "libfwevt_xml_tag_t *xml_tag" "const uint16_t *utf16_string" "size_t utf16_string_length" "libfwevt_xml_tag_t **attribute_xml_tag" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_xml_tag_get_number_of_elements "libfwevt_xml_tag_t *xml_tag, int *number_of_elements, libfwevt_error_t **error"
+.Fn libfwevt_xml_tag_get_number_of_elements "libfwevt_xml_tag_t *xml_tag" "int *number_of_elements" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_xml_tag_get_element_by_index "libfwevt_xml_tag_t *xml_tag, int element_index, libfwevt_xml_tag_t **element_xml_tag, libfwevt_error_t **error"
+.Fn libfwevt_xml_tag_get_element_by_index "libfwevt_xml_tag_t *xml_tag" "int element_index" "libfwevt_xml_tag_t **element_xml_tag" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_xml_tag_get_element_by_utf8_name "libfwevt_xml_tag_t *xml_tag, const uint8_t *utf8_string, size_t utf8_string_length, libfwevt_xml_tag_t **element_xml_tag, libfwevt_error_t **error"
+.Fn libfwevt_xml_tag_get_element_by_utf8_name "libfwevt_xml_tag_t *xml_tag" "const uint8_t *utf8_string" "size_t utf8_string_length" "libfwevt_xml_tag_t **element_xml_tag" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_xml_tag_get_element_by_utf16_name "libfwevt_xml_tag_t *xml_tag, const uint16_t *utf16_string, size_t utf16_string_length, libfwevt_xml_tag_t **element_xml_tag, libfwevt_error_t **error"
+.Fn libfwevt_xml_tag_get_element_by_utf16_name "libfwevt_xml_tag_t *xml_tag" "const uint16_t *utf16_string" "size_t utf16_string_length" "libfwevt_xml_tag_t **element_xml_tag" "libfwevt_error_t **error"
 .Ft int
-.Fn libfwevt_xml_tag_get_flags "libfwevt_xml_tag_t *xml_tag, uint8_t *flags, libfwevt_error_t **error"
+.Fn libfwevt_xml_tag_get_flags "libfwevt_xml_tag_t *xml_tag" "uint8_t *flags" "libfwevt_error_t **error"
 .Sh DESCRIPTION
 The
 .Fn libfwevt_get_version
@@ -257,7 +255,7 @@ Please report bugs of any kind on the project issue tracker: https://github.com/
 These man pages are generated from "libfwevt.h".
 .Sh COPYRIGHT
 Copyright (C) 2011-2019, Joachim Metz <joachim.metz@gmail.com>.
-
+.sp
 This is free software; see the source for copying conditions.
 There is NO warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 .Sh SEE ALSO
