Worked on Python bindings

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,5 @@
 TODO
-* Complete or remove libfwevt_xml_document_clone which is used by libevtx
-* Code clean up
-  - change code to use libfwps_debug_print_guid_value
-  - change code to use libfwps_debug_print_property_storage_value
-  - change code to use libfwps_debug_print_string_value
+* Remove deprecated libfwevt_xml_document_clone, previously used by libevtx
 
 20140928
 * see `git log' for more recent change log
