Worked on tests and code clean up

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 TODO
+* Rename _read() functions to _read_data()
+** libfwevt_manifest_read
+** libfwevt_provider_read
+** libfwevt_template_read
+** libfwevt_xml_document_read
 * Remove deprecated libfwevt_xml_document_clone, previously used by libevtx
 * Remove deprecated libfwevt_manifest_get_provider, previously used by libwrc
 
