--- a/manuals/libfwevt.3
+++ b/manuals/libfwevt.3
@@ -1,4 +1,4 @@
-.Dd July 24, 2022
+.Dd April 17, 2023
 .Dt libfwevt 3
 .Os libfwevt
 .Sh NAME
@@ -10,6 +10,16 @@
 Support functions
 .Ft const char *
 .Fn libfwevt_get_version "void"
+.Pp
+Notify functions
+.Ft void
+.Fn libfwevt_notify_set_verbose "int verbose"
+.Ft int
+.Fn libfwevt_notify_set_stream "FILE *stream" "libfwevt_error_t **error"
+.Ft int
+.Fn libfwevt_notify_stream_open "const char *filename" "libfwevt_error_t **error"
+.Ft int
+.Fn libfwevt_notify_stream_close "libfwevt_error_t **error"
 .Pp
 Error functions
 .Ft void
