--- a/documentation/Windows Event manifest binary format.asciidoc
+++ b/documentation/Windows Event manifest binary format.asciidoc
@@ -33,7 +33,7 @@ Special thanks to A. Schuster for his excellent work on this format.
 == License
 
 ....
-Copyright (C) 2011-2023, Joachim Metz <joachim.metz@gmail.com>.
+Copyright (C) 2011-2024, Joachim Metz <joachim.metz@gmail.com>.
 Permission is granted to copy, distribute and/or modify this document under the
 terms of the GNU Free Documentation License, Version 1.3 or any later version
 published by the Free Software Foundation; with no Invariant Sections, no
@@ -54,7 +54,8 @@ in the section entitled "GNU Free Documentation License".
 | 0.0.5 | J.B. Metz | August 2022 | Additional information regarding WEVT_TEMPLATE resource.
 | 0.0.6 | J.B. Metz | December 2023 | Additional information regarding WEVT_TEMPLATE resource.
 | 0.0.7 | J.B. Metz | December 2023 | Moved out of MZ, PE-COFF executable file format (EXE) documentation
-| 0.0.8 | J.B. Metz | December 2023 | Additional information regarding WEVT_TEMPLATE resource.
+| 0.0.8 | J.B. Metz | December 2023 | Additional information regarding format.
+| 0.0.9 | J.B. Metz | January 2024 | Additional information regarding format.
 |===
 
 :numbered:
@@ -136,7 +137,23 @@ The offset is relative to the start of the instrumentation manifest
 | 4 | 4 | | [yellow-background]*Unknown*
 |===
 
+==== Provider element types
+
 [yellow-background]*The provider element type is determined by its signature?*
+
+[cols="1,1,5",options="header"]
+|===
+| Value | Identifier | Description
+| "CHAN" | | Channel definitions
+| "EVNT" | | Event definitions
+| "KEYW" | | Keyword definitions
+| "LEVL" | | Level definitions
+| "MAPS" | | Maps definitions
+| "OPCO" | | Opcode definitions
+| "TASK" | | Task definitions
+| "TTBL" | | Template table
+| "PRVA" | | [yellow-background]*Unknown (private?)*
+|===
 
 == Keyword definitions
 
